--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "",
-  "version": "",
+  "name": "@scola/server",
+  "version": "0.9.0",
+  "description": "Server for @scola based applications",
+  "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
